cmake_minimum_required(VERSION 2.8.3)
project(client)
set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
set(CMAKE_CXX_FLAGS  "-lboost_system -Wno-psabi -pthread -lboost_filesystem -lboost_thread -ldl -lwiringPi -lrt -lm -lcrypt ${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS  "-lboost_system -Wno-psabi -pthread -lboost_filesystem -lboost_thread -ldl -lwiringPi -lrt -lm -lcrypt ${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(Boost COMPONENTS system)
include_directories(
  thirdparty
)
add_executable(client src/client.cpp)
add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
target_link_libraries(client ${catkin_LIBRARIES})
target_link_libraries(client ${CMAKE_DL_LIBS})
target_link_libraries(client wiringPi)
target_link_libraries(client crypt)
target_link_libraries(client ${Boost_LIBRARIES} rt)
